# leetcode

./: .gitignore  README.md  leetgo.yaml  pyproject.toml
contest/: Cargo.toml
contest/biweekly-116/1.subarrays-distinct-element-sum-of-squares-i/: question.md  solution.py  testcases.txt
contest/biweekly-116/2.minimum-number-of-changes-to-make-binary-string-beautiful/: question.md  solution.py  testcases.txt
contest/biweekly-116/3.length-of-the-longest-subsequence-that-sums-to-target/: question.md  solution.py  testcases.txt
contest/biweekly-116/4.subarrays-distinct-element-sum-of-squares-ii/: question.md  solution.py  testcases.txt
contest/biweekly-117/1.distribute-candies-among-children-i/: question.md  solution.py
contest/biweekly-117/2.distribute-candies-among-children-ii/: question.md  solution.py  testcases.txt
contest/biweekly-117/3.number-of-strings-which-can-be-rearranged-to-contain-substring/: question.md  solution.py  testcases.txt
contest/biweekly-117/4.maximum-spending-after-buying-items/: question.md  solution.py  testcases.txt
contest/biweekly-118/1.find-words-containing-character/: question.md  solution.py  testcases.txt
contest/biweekly-118/2.maximize-area-of-square-hole-in-grid/: question.md  solution.py  testcases.txt
contest/biweekly-118/3.minimum-number-of-coins-for-fruits/: question.md  solution.py  testcases.txt
contest/biweekly-118/4.find-maximum-non-decreasing-array-length/: question.md  solution.py  testcases.txt
contest/biweekly-119/1.find-common-elements-between-two-arrays/: question.md  solution.py  testcases.txt
contest/biweekly-119/2.remove-adjacent-almost-equal-characters/: question.md  solution.py  testcases.txt
contest/biweekly-119/3.length-of-longest-subarray-with-at-most-k-frequency/: question.md  solution.py
contest/biweekly-119/4.number-of-possible-sets-of-closing-branches/: question.md  solution.py  testcases.txt
contest/biweekly-120/1.count-the-number-of-incremovable-subarrays-i/: question.md  solution.py  testcases.txt
contest/biweekly-120/2.find-polygon-with-the-largest-perimeter/: question.md  solution.py
contest/biweekly-120/3.count-the-number-of-incremovable-subarrays-ii/: question.md  solution.py  testcases.txt
contest/biweekly-120/4.find-number-of-coins-to-place-in-tree-nodes/: question.md  solution.py  testcases.txt
contest/biweekly-121/1.smallest-missing-integer-greater-than-sequential-prefix-sum/: question.md  solution.py  testcases.txt
contest/biweekly-121/2.minimum-number-of-operations-to-make-array-xor-equal-to-k/: question.md  solution.py  testcases.txt
contest/biweekly-121/3.minimum-number-of-operations-to-make-x-and-y-equal/: question.md  solution.py  testcases.txt
contest/biweekly-121/4.count-the-number-of-powerful-integers/: question.md  solution.py  testcases.txt
contest/biweekly-122/1.divide-an-array-into-subarrays-with-minimum-cost-i/: question.md  solution.py
contest/biweekly-122/2.find-if-array-can-be-sorted/: question.md  solution.py  testcases.txt
contest/biweekly-122/3.minimize-length-of-array-using-operations/: question.md  solution.py  testcases.txt
contest/biweekly-122/4.divide-an-array-into-subarrays-with-minimum-cost-ii/: question.md  solution.py  testcases.txt
contest/biweekly-123/1.type-of-triangle-ii/: question.md  solution.py  testcases.txt
contest/biweekly-123/2.find-the-number-of-ways-to-place-people-i/: question.md  solution.py  testcases.txt
contest/biweekly-123/3.maximum-good-subarray-sum/: question.md  solution.py  testcases.txt
contest/biweekly-123/4.find-the-number-of-ways-to-place-people-ii/: question.md  solution.py  testcases.txt
contest/weekly-369/1.find-the-k-or-of-an-array/: question.md  solution.py
contest/weekly-369/2.minimum-equal-sum-of-two-arrays-after-replacing-zeros/: question.md  solution.py  testcases.txt
contest/weekly-369/3.minimum-increment-operations-to-make-array-beautiful/: question.md  solution.py  testcases.txt
contest/weekly-369/4.maximum-points-after-collecting-coins-from-all-nodes/: question.md  solution.py  testcases.txt
contest/weekly-370/1.find-champion-i/: question.md  solution.py
contest/weekly-370/2.find-champion-ii/: question.md  solution.py
contest/weekly-370/3.maximum-score-after-applying-operations-on-a-tree/: question.md  solution.py  testcases.txt
contest/weekly-370/4.maximum-balanced-subsequence-sum/: question.md  solution.py  testcases.txt
contest/weekly-371/1.maximum-strong-pair-xor-i/: question.md  solution.py  testcases.txt
contest/weekly-371/2.high-access-employees/: question.md  solution.py  testcases.txt
contest/weekly-371/3.minimum-operations-to-maximize-last-elements-in-arrays/: question.md  solution.py  testcases.txt
contest/weekly-371/4.maximum-strong-pair-xor-ii/: question.md  solution.py  testcases.txt
contest/weekly-372/1.make-three-strings-equal/: question.md  solution.py  testcases.txt
contest/weekly-372/2.separate-black-and-white-balls/: question.md  solution.py
contest/weekly-372/3.maximum-xor-product/: question.md  solution.py  testcases.txt
contest/weekly-372/4.find-building-where-alice-and-bob-can-meet/: question.md  solution.py  testcases.txt
contest/weekly-373/1.matrix-similarity-after-cyclic-shifts/: question.md  solution.py  testcases.txt
contest/weekly-373/2.count-beautiful-substrings-i/: question.md  solution.py  testcases.txt
contest/weekly-373/3.make-lexicographically-smallest-array-by-swapping-elements/: question.md  solution.py  testcases.txt
contest/weekly-373/4.count-beautiful-substrings-ii/: question.md  solution.py  testcases.txt
contest/weekly-374/1.find-the-peaks/: question.md  solution.py
contest/weekly-374/2.minimum-number-of-coins-to-be-added/: question.md  solution.py  testcases.txt
contest/weekly-374/3.count-complete-substrings/: question.md  solution.py  testcases.txt
contest/weekly-374/4.count-the-number-of-infection-sequences/: question.md  solution.py  testcases.txt
contest/weekly-375/1.count-tested-devices-after-test-operations/: question.md  solution.py
rust/: Cargo.toml
(+715 files in other folders)
