[[bin]]
name = 'same-tree'
path = 'src/0100.same-tree/solution.rs'

[[bin]]
name = 'bitwise-and-of-numbers-range'
path = 'src/0201.bitwise-and-of-numbers-range/solution.rs'

[[bin]]
name = 'missing-number'
path = 'src/0268.missing-number/solution.rs'

[[bin]]
name = 'find-bottom-left-tree-value'
path = 'src/0513.find-bottom-left-tree-value/solution.rs'

[[bin]]
name = 'diameter-of-binary-tree'
path = 'src/0543.diameter-of-binary-tree/solution.rs'

[[bin]]
name = 'cheapest-flights-within-k-stops'
path = 'src/0787.cheapest-flights-within-k-stops/solution.rs'

[[bin]]
name = 'squares-of-a-sorted-array'
path = 'src/0977.squares-of-a-sorted-array/solution.rs'

[[bin]]
name = 'find-the-town-judge'
path = 'src/0997.find-the-town-judge/solution.rs'

[[bin]]
name = 'even-odd-tree'
path = 'src/1609.even-odd-tree/solution.rs'

[[bin]]
name = 'find-all-people-with-secret'
path = 'src/2092.find-all-people-with-secret/solution.rs'

[[bin]]
name = 'greatest-common-divisor-traversal'
path = 'src/2709.greatest-common-divisor-traversal/solution.rs'

[[bin]]
name = 'maximum-odd-binary-number'
path = 'src/2864.maximum-odd-binary-number/solution.rs'

[dependencies]
anyhow = '1.0.80'
leetgo-rs = '0.2.1'
serde = '1.0.197'
serde_json = '1.0.114'

[lints]
[lints.rust]
unused_imports = 'allow'

[package]
edition = '2021'
name = 'leetcode-solutions'
version = '0.1.0'
