[[bin]]
name = 'remove-nth-node-from-end-of-list'
path = 'src/0019.remove-nth-node-from-end-of-list/solution.rs'

[[bin]]
name = 'insert-interval'
path = 'src/0057.insert-interval/solution.rs'

[[bin]]
name = 'same-tree'
path = 'src/0100.same-tree/solution.rs'

[[bin]]
name = 'bitwise-and-of-numbers-range'
path = 'src/0201.bitwise-and-of-numbers-range/solution.rs'

[[bin]]
name = 'reverse-linked-list'
path = 'src/0206.reverse-linked-list/solution.rs'

[[bin]]
name = 'palindrome-linked-list'
path = 'src/0234.palindrome-linked-list/solution.rs'

[[bin]]
name = 'product-of-array-except-self'
path = 'src/0238.product-of-array-except-self/solution.rs'

[[bin]]
name = 'missing-number'
path = 'src/0268.missing-number/solution.rs'

[[bin]]
name = 'find-the-duplicate-number'
path = 'src/0287.find-the-duplicate-number/solution.rs'

[[bin]]
name = 'range-sum-query-immutable'
path = 'src/0303.range-sum-query-immutable/solution.rs'

[[bin]]
name = 'coin-change'
path = 'src/0322.coin-change/solution.rs'

[[bin]]
name = 'intersection-of-two-arrays'
path = 'src/0349.intersection-of-two-arrays/solution.rs'

[[bin]]
name = 'minimum-number-of-arrows-to-burst-balloons'
path = 'src/0452.minimum-number-of-arrows-to-burst-balloons/solution.rs'

[[bin]]
name = 'find-bottom-left-tree-value'
path = 'src/0513.find-bottom-left-tree-value/solution.rs'

[[bin]]
name = 'contiguous-array'
path = 'src/0525.contiguous-array/solution.rs'

[[bin]]
name = 'diameter-of-binary-tree'
path = 'src/0543.diameter-of-binary-tree/solution.rs'

[[bin]]
name = 'task-scheduler'
path = 'src/0621.task-scheduler/solution.rs'

[[bin]]
name = 'cheapest-flights-within-k-stops'
path = 'src/0787.cheapest-flights-within-k-stops/solution.rs'

[[bin]]
name = 'custom-sort-string'
path = 'src/0791.custom-sort-string/solution.rs'

[[bin]]
name = 'middle-of-the-linked-list'
path = 'src/0876.middle-of-the-linked-list/solution.rs'

[[bin]]
name = 'binary-subarrays-with-sum'
path = 'src/0930.binary-subarrays-with-sum/solution.rs'

[[bin]]
name = 'find-the-shortest-superstring'
path = 'src/0943.find-the-shortest-superstring/solution.rs'

[[bin]]
name = 'bag-of-tokens'
path = 'src/0948.bag-of-tokens/solution.rs'

[[bin]]
name = 'squares-of-a-sorted-array'
path = 'src/0977.squares-of-a-sorted-array/solution.rs'

[[bin]]
name = 'find-the-town-judge'
path = 'src/0997.find-the-town-judge/solution.rs'

[[bin]]
name = 'remove-zero-sum-consecutive-nodes-from-linked-list'
path = 'src/1171.remove-zero-sum-consecutive-nodes-from-linked-list/solution.rs'

[[bin]]
name = 'even-odd-tree'
path = 'src/1609.even-odd-tree/solution.rs'

[[bin]]
name = 'merge-in-between-linked-lists'
path = 'src/1669.merge-in-between-linked-lists/solution.rs'

[[bin]]
name = 'minimum-length-of-string-after-deleting-similar-ends'
path = 'src/1750.minimum-length-of-string-after-deleting-similar-ends/solution.rs'

[[bin]]
name = 'maximum-score-of-a-good-subarray'
path = 'src/1793.maximum-score-of-a-good-subarray/solution.rs'

[[bin]]
name = 'minimum-non-zero-product-of-the-array-elements'
path = 'src/1969.minimum-non-zero-product-of-the-array-elements/solution.rs'

[[bin]]
name = 'find-all-people-with-secret'
path = 'src/2092.find-all-people-with-secret/solution.rs'

[[bin]]
name = 'find-the-pivot-integer'
path = 'src/2485.find-the-pivot-integer/solution.rs'

[[bin]]
name = 'minimum-common-value'
path = 'src/2540.minimum-common-value/solution.rs'

[[bin]]
name = 'count-distinct-numbers-on-board'
path = 'src/2549.count-distinct-numbers-on-board/solution.rs'

[[bin]]
name = 'minimum-number-of-visited-cells-in-a-grid'
path = 'src/2617.minimum-number-of-visited-cells-in-a-grid/solution.rs'

[[bin]]
name = 'frequency-tracker'
path = 'src/2671.frequency-tracker/solution.rs'

[[bin]]
name = 'greatest-common-divisor-traversal'
path = 'src/2709.greatest-common-divisor-traversal/solution.rs'

[[bin]]
name = 'maximum-odd-binary-number'
path = 'src/2864.maximum-odd-binary-number/solution.rs'

[[bin]]
name = 'count-elements-with-maximum-frequency'
path = 'src/3005.count-elements-with-maximum-frequency/solution.rs'

[dependencies]
anyhow = '1.0.80'
leetgo-rs = '0.2.1'
serde = '1.0.197'
serde_json = '1.0.114'

[lints]
[lints.rust]
unused_imports = 'allow'

[package]
edition = '2021'
name = 'leetcode-solutions'
version = '0.1.0'
